--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -160,6 +160,7 @@ jobs:
         inputs:
           targetType: inline
           script: |
+            mvn -f .\testProxy\pom.xml clean install
             mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f .\testProxy\pom.xml &
 
       # Linux requires .NET 8.0 install for tests to run, no matter which framework target is being tested
@@ -362,6 +363,7 @@ jobs:
         inputs:
           targetType: inline
           script: |
+            mvn -f .\testProxy\pom.xml clean install
             mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f .\testProxy\pom.xml &
 
       - task: PowerShell@2
