--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -160,8 +160,9 @@ jobs:
         inputs:
           targetType: inline
           script: |
-            mvn -f $(Build.SourcesDirectory)/testProxy/pom.xml clean install -q
-            Start-Job -ScriptBlock { mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $(Build.SourcesDirectory)/testProxy/pom.xml }
+            $pomPath = (Get-Item $(Build.SourcesDirectory)/testProxy/pom.xml).FullName
+            mvn -f $pomPath clean install -q
+            Start-Job -ScriptBlock { mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $pomPath }
 
       # Linux requires .NET 8.0 install for tests to run, no matter which framework target is being tested
       - task: UseDotNet@2
@@ -363,8 +364,9 @@ jobs:
         inputs:
           targetType: inline
           script: |
-            mvn -f $(Build.SourcesDirectory)/testProxy/pom.xml clean install -q
-            Start-Job -ScriptBlock { mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $(Build.SourcesDirectory)/testProxy/pom.xml }
+            $pomPath = (Get-Item $(Build.SourcesDirectory)/testProxy/pom.xml).FullName
+            mvn -f $pomPath clean install -q
+            Start-Job -ScriptBlock { mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $pomPath }
 
       - task: PowerShell@2
         displayName: 'build and run tests'
