--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -154,17 +154,6 @@ jobs:
           jdkArchitectureOption: 'x64'
           jdkSourceOption: 'PreInstalled'
 
-      - task: PowerShell@2
-        displayName: 'Run test proxy'
-        condition: eq(variables.SHOULD_RUN, 'True')
-        inputs:
-          targetType: inline
-          script: |
-            $pomPath = (Get-Item $(Build.SourcesDirectory)/testProxy/pom.xml).FullName
-            Write-Host "Using pom path of: " $pomPath
-            mvn -f $pomPath clean install -q
-            Start-Job -ScriptBlock { mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $pomPath }
-
       # Linux requires .NET 8.0 install for tests to run, no matter which framework target is being tested
       - task: UseDotNet@2
         displayName: 'Use .NET SDK 8.0'
@@ -180,6 +169,12 @@ jobs:
         inputs:
           targetType: inline
           script: |
+            # Run Test Proxy
+            $pomPath = (Get-Item $(Build.SourcesDirectory)/testProxy/pom.xml).FullName
+            Write-Host "Using pom path of: " $pomPath
+            mvn -f $pomPath clean install -q
+            Start-Job -ScriptBlock { mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $pomPath }
+
             dotnet test --logger trx
         env:
           # Environment variables for IoT Hub E2E tests
@@ -360,22 +355,17 @@ jobs:
           jdkSourceOption: 'PreInstalled'
 
       - task: PowerShell@2
-        displayName: 'Run test proxy'
-        condition: eq(variables.SHOULD_RUN, 'True')
-        inputs:
-          targetType: inline
-          script: |
-            $pomPath = (Get-Item $(Build.SourcesDirectory)/testProxy/pom.xml).FullName
-            Write-Host "Using pom path of: " $pomPath
-            mvn -f $pomPath clean install -q
-            Start-Job -ScriptBlock { mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $pomPath }
-
-      - task: PowerShell@2
         displayName: 'build and run tests'
         condition: eq(variables.SHOULD_RUN, 'True')
         inputs:
           targetType: inline
           script: |
+            # Run Test Proxy
+            $pomPath = (Get-Item $(Build.SourcesDirectory)/testProxy/pom.xml).FullName
+            Write-Host "Using pom path of: " $pomPath
+            mvn -f $pomPath clean install -q
+            Start-Job -ScriptBlock { mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $pomPath }
+
             dotnet test --logger trx
             
       - task: PublishTestResults@2
