--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -390,6 +390,7 @@ jobs:
   ### .Net SDL Analyzers ###
   - job: DOTNet_SDL_Analyzers
     displayName: .Net SDL Analyzers
+    condition: false()
     timeoutInMinutes: 60
 
     condition: succeeded()
