--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -170,10 +170,8 @@ jobs:
           targetType: 'inline'
           script: |
             # Run Test Proxy
-            $pomPath = (Get-Item $(Build.SourcesDirectory)/testProxy/pom.xml).FullName
-            Write-Host "Using pom path of: " $pomPath
-            mvn -f $pomPath clean install -q
-            mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $pomPath &
+            mvn -f $(Build.SourcesDirectory)/testProxy/pom.xml clean install -q
+            mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $(Build.SourcesDirectory)/testProxy/pom.xml &
 
             dotnet test --logger trx
 
