--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -171,7 +171,7 @@ jobs:
           script: |
             # Run Test Proxy
             mvn -f $(Build.SourcesDirectory)/testProxy/pom.xml clean install -q
-            mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $(Build.SourcesDirectory)/testProxy/pom.xml &
+            mvn exec:java -Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $(Build.SourcesDirectory)/testProxy/pom.xml &
 
             dotnet test --logger trx
 
