--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -386,7 +386,7 @@ jobs:
   ### .Net SDL Analyzers ###
   - job: DOTNet_SDL_Analyzers
     displayName: .Net SDL Analyzers
-    condition: false
+    condition: succeeded()
     timeoutInMinutes: 60
     pool:
       vmImage: windows-2022
