Revert "to revert: disable other tests"
This reverts commit e16bb106817c804c4bce107b5a9bdc994fcd48ca.

--- a/e2e/test/E2ETests.csproj
+++ b/e2e/test/E2ETests.csproj
@@ -23,6 +23,9 @@
     <Compile Remove="provisioning\ReprovisioningE2ETests.cs" />
     <Compile Remove="helpers\StorageContainer.cs" />
     <Compile Remove="helpers\ImportExportDevicesHelpers.cs" />
+    <Compile Remove="iothub\service\RegistryManagerImportDevicesTests.cs" />
+    <Compile Remove="iothub\service\RegistryManagerExportDevicesTests.cs" />
+    <Compile Remove="iothub\service\DigitalTwinClientE2ETests.cs" />
     <Compile Remove="helpers\digitaltwins\models\ThermostatTwin.cs" />
     <Compile Remove="helpers\digitaltwins\models\TemperatureControllerTwin.cs" />
     <Compile Remove="helpers\ProvisioningServiceRetryPolicy.cs" />
