backtick in windows?

--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -359,7 +359,7 @@ jobs:
           targetType: inline
           script: |
             mvn -f $(Build.SourcesDirectory)/testProxy/pom.xml clean install -q
-            start /b mvn exec:java `-Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $(Build.SourcesDirectory)/testProxy/pom.xml
+            start /b mvn exec:java -Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $(Build.SourcesDirectory)/testProxy/pom.xml
 
       - task: CmdLine@2
         displayName: 'Run tests'
