separate steps for linux

--- a/vsts/vsts.yaml
+++ b/vsts/vsts.yaml
@@ -164,7 +164,7 @@ jobs:
          installationPath: $(Agent.ToolsDirectory)/dotnet
 
       - task: Bash@3
-        displayName: 'Start test proxy and run tests'
+        displayName: 'Start test proxy'
         condition: eq(variables.SHOULD_RUN, 'True')
         inputs:
           targetType: 'inline'
@@ -172,6 +172,12 @@ jobs:
             mvn -f $(Build.SourcesDirectory)/testProxy/pom.xml clean install -q
             mvn exec:java -Dexec.mainClass="com.microsoft.azure.sdk.iot.Main" -f $(Build.SourcesDirectory)/testProxy/pom.xml &
 
+      - task: Bash@3
+        displayName: 'Run tests'
+        condition: eq(variables.SHOULD_RUN, 'True')
+        inputs:
+          targetType: 'inline'
+          script: |
             dotnet test --logger trx
 
         env:
