--- a/testProxy/pom.xml
+++ b/testProxy/pom.xml
@@ -6,7 +6,7 @@
 
     <groupId>com.microsoft.azure.sdk.iot</groupId>
     <artifactId>test-proxy</artifactId>
-    <version>1.0-SNAPSHOT</version>
+    <version>1.0</version>
 
     <properties>
         <maven.compiler.source>11</maven.compiler.source>
