--- a/testProxy/dockerfile
+++ b/testProxy/dockerfile
@@ -6,7 +6,7 @@ WORKDIR /javaapp
 # Copy the Java source file into the container
 COPY . /javaapp
 
-EXPOSE 9000
+EXPOSE 9000/tcp
 
 RUN apt-get update
 RUN apt-get install maven -y
@@ -15,4 +15,4 @@ RUN apt-get install maven -y
 RUN mvn install -f /javaapp/pom.xml
 
 # Set the default command to run the Java program
-CMD ["java", "-jar", "Main.jar", "-b", "0.0.0.0", "-p", "9000"]
+CMD ["java", "-jar", "/javaapp/target/test-proxy-1.0-with-deps.jar", "-b", "0.0.0.0", "-p", "9000"]
